// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display an empty table view default values 1`] = `
<div
  className="mcs-empty-table-view"
>
  <div
    className="ant-col-24 mcs-empty-table-view-content"
  >
    <div
      className="mcs-empty-table-view-logo"
    >
      <span
        className="icon "
      >
        <i
          className="mcs-warning"
        />
      </span>
    </div>
    No data found
  </div>
</div>
`;

exports[`should display an empty table view with a message and an icon 1`] = `
<div
  className="mcs-empty-table-view"
>
  <div
    className="ant-col-24 mcs-empty-table-view-content mcs-table-view-empty"
  >
    <div
      className="mcs-empty-table-view-logo"
    >
      <span
        className="icon "
      >
        <i
          className="mcs-magnifier"
        />
      </span>
    </div>
    Nothing to see here
  </div>
</div>
`;
